--- a/templates/prometheus-operator-values.yml.j2
+++ b/templates/prometheus-operator-values.yml.j2
@@ -44,7 +44,7 @@ prometheus:
       - /prometheus(/|$)(.*)
 
 grafana:
-  adminPassword: admin
+  adminPassword: {{ kubernetes_grafana_admin_password }}
   env:
     GF_SERVER_ROOT_URL: "%(protocol)s://%(domain)s/grafana"
   ingress:
