--- a/templates/nginx-ingress-values.yml.j2
+++ b/templates/nginx-ingress-values.yml.j2
@@ -1,5 +1,7 @@
+{% if not (kubernetes_install_metallb | bool) %}
 controller:
   service:
     type: ClusterIP
     externalIPs:
       - {{ kubernetes_apiserver_advertise_address | default(ansible_default_ipv4.address, true) }}
+{% endif %}
