--- a/templates/jenkins-values.yml.j2
+++ b/templates/jenkins-values.yml.j2
@@ -31,7 +31,7 @@ master:
       value: {{ ansible_env.no_proxy }}
 {% endif %}
   installPlugins:
-    {{ kubernetes_jenkins_install_plugins | to_yaml }}
+    {{ kubernetes_jenkins_install_plugins | to_nice_yaml }}
   JCasC:
     configScripts:
       system-config: |
